<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/orderNumber"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_text" />

        <TextView
            android:id="@+id/orderItems"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_text" />

        <TextView
            android:id="@+id/orderHistoryPrice"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_text" />

        <ImageButton
            android:id="@+id/orderCancelButton"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/trash" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>